[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1"
gba = "0.11.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[package.metadata.docs.rs]
default-target = "thumbv4t-none-eabi"
cargoflags = ["-Zbuild-std=core"]
rustdoc-args = ["--cfg","docs_rs"]